fixed spacing issues with conflict

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,6 @@
 
 .conflict-img
 {
-	width: 650px;
+	width: 765px;
 	height: 750px;
 }
